--- a/index.html
+++ b/index.html
@@ -29,56 +29,32 @@
         </label>
     </nav> 
     
-<div class="banner">
-    <div class="slider">
-        <img src="" id="slideImg">
-    </div>
-    <div class="overlay">
-        <h1>Make Your Dream Interior A Reality</h1>
-            <p>Helping you make elegant and beautiful interiors, created by design professionals.
-            </p>
-            <div>
-                <button type="button"><span></span> Watch Video</button>
-                <button type="button"><span></span> Get A Quote</button>
-            </div>          
-    </div>
-</div>
-   
 
-<section class="about-us">
-    <div class="about-row">
-        <div class="about-col">
-            <h1>About Us</h1>
-                    <p>
-                        At auradecor we bring our clients dream interior decoration to life.
-                        Our in-house team of experts ensure the creation of amazing design experience
-                        with our designs, giving lasting impressions to admirers. Do you have a project
-                        and would like to be a part of the creative process? We are very receptive
-                        and as such always ready to collaborate with our clients to deliver visible
-                        and viable results.            
-                   </p> 
-                   <a href="" class="new-btn">LEARN MORE</a>    
-        </div>
-        <div class="about-col">
-            <img src="divine.jpg" >
-        </div>
-
-    </div>
-</section>
-
-<div class="project-texts">
-    <h3>Our Projects</h3>
-</div>
-
-<div class="project-image">
-    <img class="project-image-col-2 project-image-row-2" src="3.jpg">
-    <img src="1.jpg">
-    <img src="4.jpg">
-    <img src="6.jpg">
-    <img src="9.jpg">
-</div>
-
-
+    <div class="row">    
+        <div class="hero">
+            <div class="hero-left">
+                <h1>AKHARIA EMMANUEL.</h1>
+                <p>
+                    I am a front-end developer, product and motion designer based in Lagos, Nigeria. 
+                    I will be helping you create impeccable digital experience, by building scalable and 
+                    responsive web projects with clean and maintainable code.
+                </p> <br>
+                <p> 
+                    Problem solving as a niche helps me  navigate ideas and provide solutions. 
+                    With clean UI and great UX in mind, i develop web designs giving it
+                    unique feel and a seamless experience.    
+                </p>  <br>
+                <p> A glance at my projects will show my range as a creative.
+                     I am available to work at startups or remotely, collaborating with other
+                    digital experts to yield visible and viable results.                      
+                </p>  
+                <a href="" class="new-btn">Get Started</a>                
+            </div>
+            <div class="hero-right">
+                <img src="Hero3.jpeg">
+            </div>   
+        </div>    
+    </div>     
 
 
 <footer id="contact">
