--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav >
         <input id="portfolionav-toggle" type="checkbox">
         <a href="#" class="logo">
-            win<strong>X</strong>change
+            win<strong>X</strong>tickets
         </a>    
         <ul class="links">
             <li><a href="index.html">Home</a></li>
@@ -31,30 +31,42 @@
     
 
     <div class="row">    
-        <div class="hero">
-            <div class="hero-left">
-                <h1>AKHARIA EMMANUEL.</h1>
-                <p>
-                    I am a front-end developer, product and motion designer based in Lagos, Nigeria. 
-                    I will be helping you create impeccable digital experience, by building scalable and 
-                    responsive web projects with clean and maintainable code.
-                </p> <br>
-                <p> 
-                    Problem solving as a niche helps me  navigate ideas and provide solutions. 
-                    With clean UI and great UX in mind, i develop web designs giving it
-                    unique feel and a seamless experience.    
-                </p>  <br>
-                <p> A glance at my projects will show my range as a creative.
-                     I am available to work at startups or remotely, collaborating with other
-                    digital experts to yield visible and viable results.                      
-                </p>  
-                <a href="" class="new-btn">Get Started</a>                
-            </div>
-            <div class="hero-right">
-                <img src="Hero3.jpeg">
+        <div class="hero-section">
+            <div class="hero">
+                <div class="hero-left">
+                    <h1>  No 1 <br>
+                         Show, Event <br>
+                         Festival Plug
+                    </h1>
+                    <div class="hero-vibes">
+                        <p>Vibes</p>
+                        <i class="fa-solid fa-star"></i>
+                        <p>Gbemidebe</p>
+                        <i class="fa-solid fa-star"></i>
+                        <p>Cruise</p>
+                    </div> 
+                    <a href="" class="new-btn">Get Started</a>                
+                </div>
+                <div class="hero-right">
+                    <img src="Hero3.jpeg">
+                </div>   
             </div>   
-        </div>    
-    </div>     
+        </div> 
+    </div>   
+    
+    <div class="row">
+        <div class="trending">
+            <h2>Trending</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="trending con">
+            <div class="trending-list">
+                <img src="" class="thumbnail">
+            </div>
+        </div>
+    </div>
 
 
 <footer id="contact">
