--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="row">
         <div class="blog-left">
             <h3> Get <br> The Memo</h3>
-            <p> At gbemidebeTickets we keep you updated on buzzing events, concerts, 
+            <p> At gbemidebeTickets we are dedicated to keeping you updated on buzzing events, concerts, 
                 festivals, beach & pool parties, club tours and live shows by
                 your favorites artistes. You wanna pull up with your friends and families?
                  We have got tickets for you today!!               
@@ -118,7 +118,23 @@
         </div>
 
         <div class="blog-right">
-                    
+            <div class="top-row">
+                <div class="top-box">
+                    <h3>Take</h3>                 
+                </div>
+                <div class="top-box">
+                    <h3>You</h3>                 
+                </div>
+               </div>
+               <div class="top-row">
+                <div class="top-box">
+                    <h3>There</h3>           
+                </div>
+                <div class="top-box">
+                    <h3>No Time!!</h3>
+                </div>
+               </div>
+            </div>    
         </div>
     </div>
 </div> 
@@ -140,7 +156,7 @@
             </p> 
             <br>
             <p> He is passionate about bringing people together to have a good time
-                and has been active in this line since 2016. 
+                and has been active in this regard since 2016. 
             </p> 
 
             <a href="" class="new-btn">Follow</a> 
@@ -158,8 +174,9 @@
             <h3>gbemidebe<strong>Tickets</strong></h3>
             <ul class="feeter-ul">
                 <p>
-                    Sed ut perspiciatis,<br> unde omnis iste<br>  natus 
-                    accusantium <br>doloremque estre. 
+                    No 1,<br> 
+                    Events, shows, parties,
+                    <br>festivals & concerts plug. 
                 </p>               
             </ul>
         </div>
