--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h3> Get <br> The Memo</h3>
             <p> At gbemidebeTickets we are dedicated to keeping you updated on buzzing events, concerts, 
                 festivals, beach & pool parties, club tours and live shows by
-                your favorites artistes. You wanna pull up with your friends and families?
+                your favorites artistes. You wanna pull up with your friends and family?
                  We have got tickets for you today!!               
             </p>          
         </div>
@@ -142,24 +142,25 @@
 <div class="founder">
     <div class="row">
         <div class="founder-left">
-            <img src="Boss.jpg">
+            <img src="">
         </div>
         <div class="founder-right">
             <h3> Meet The Founder</h3>
-            <h2> Omodiagbe <br>
-                Odion Edwin.
+            <h2> Odion <br>
+                 Edwin.
             </h3>
-            <p> Omodiagbe Odion Edwin who hails from Edo State, Nigeria, 
-                is a budding event planner based in Lagos, Nigeria. He holds 
+            <p> Odion Edwin is a budding event planner based in Lagos, Nigeria. He holds 
                 bachelors's degree in political science from the prestigious University
                 Of Benin and is also a crypto expert amongst other things. 
             </p> 
             <br>
             <p> He is passionate about bringing people together to have a good time
                 and has been active in this regard since 2016. 
-            </p> 
+            </p> <br>
+            <p>He has worked with many agencies across the nation hosting successful
+                events since debut.
+             </p>
 
-            <a href="" class="new-btn">Follow</a> 
             
         </div>
     </div>
