--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
                  Edwin.
             </h3>
             <p> Odion Edwin is a budding event planner based in Lagos, Nigeria. He holds 
-                bachelors's degree in political science from the prestigious University
-                Of Benin and is also a crypto expert amongst other things. 
+                bachelors's degree in political science and is also a crypto expert amongst other things. 
             </p> 
             <br>
             <p> He is passionate about bringing people together to have a good time
