--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     </div>   
     
     <div class="row">
-     <div class="trending">
-        <h2>Buzzing</h2>
-     </div>     
+        <div class="trending">
+            <h2>Buzzing</h2>          
+         </div> 
     </div>
-
+    
     <div class="row">
         <div class="project-image">
             <img src="king perry.jpg">
@@ -68,6 +68,10 @@
             <img src="call.jpg">
             <img src="tap.jpg">
         </div>      
+    </div>
+
+    <div class="trend-row">         
+        <a href="">See more</a>
     </div>
 
     <div class="row">
